using jdbcmanager to login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.security.user.password=123
 logging.level.root=WARN
 
 server.port=8082
+
+spring.datasource.url=jdbc:postgresql://localhost:54322/securebank
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
